--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,1 @@
-<resources>
-    <string name="app_name">HuangShan</string>
-    <string name="hello_blank_fragment">hello_blank_fragment</string>
-</resources>
+<resources>    <string name="app_name">HuangShan</string>    <string name="hello_blank_fragment">hello_blank_fragment</string></resources>
